# ImGuiTemplate

./: .gitignore  CreateProject.bat  CreateProject.sh  PACKAGES  README.md
cmake/: CMakeLists.txt  ConfigureNinja.sh  Utils.cmake
code/: CommonLogView.cpp  CommonLogView.h  Core.cpp  Core.h  Main.cpp  Main.h  MainCommon.cpp  MainLinux.cpp  MainMac.mm  MainWin.cpp
code/ImGui/: FontAwesome.h  ImGuiMain.cpp  ImGuiMain.h  imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp
code/Resources/: App.rc  resource.h
